--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ download/
 system/storage/cache/
 system/storage/logs/
 system/storage/modification/
+system/storage/upload/
 
 admin/config.php
 config.php
