Updated - MS demads

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,39 @@
+# STARTNITRO
+ExpiresActive On
+
+#CSS JS XML TXT - 1 WEEK
+<FilesMatch "\.(xml|txt|css|js)$">
+Header set Cache-Control "max-age=604800, public"
+ExpiresDefault "access plus 1 week"
+</FilesMatch>
+
+#JPG JPEG PNG GIF SWF SVG - 1 WEEK
+<FilesMatch "\.(jpg|jpeg|png|gif|swf|svg|JPG|JPEG|PNG|GIF|SWF|SVG)$">
+Header set Cache-Control "max-age=604800, public"
+ExpiresDefault "access plus 1 week"
+Header set Last-Modified "Wed, 05 Jun 2009 06:40:46 GMT"
+</FilesMatch>
+
+#OTF WOFF TTF ICO PDF FLV - 1 WEEK
+<FilesMatch "\.(otf|ico|pdf|flv|woff|ttf)$">
+Header set Cache-Control "max-age=604800, public"
+ExpiresDefault "access plus 1 week"
+</FilesMatch>
+# ENDNITRO
+# STARTCOMPRESSNITRO
+RewriteEngine On
+RewriteRule .* - [E=HTTP_IF_MODIFIED_SINCE:%{HTTP:If-Modified-Since}]
+
+RewriteCond %{SCRIPT_FILENAME} !-d
+RewriteRule ^(\/?((catalog)|(assets)).+)\.css$ assets/style.php?l=4&p=$1&c=604800 [NC,L]
+
+RewriteCond %{SCRIPT_FILENAME} !-d
+RewriteRule ^(\/?((catalog)|(assets)).+)\.js$ assets/script.php?l=4&p=$1&c=604800 [NC,L]
+AddType image/svg+xml .svg
+AddOutputFilterByType DEFLATE image/svg+xml
+AddType application/x-font-woff .woff
+AddOutputFilterByType DEFLATE application/x-font-woff
+# ENDCOMPRESSNITRO
 # 1.To use URL Alias you need to be running apache with mod_rewrite enabled.
 
 # 2. In your opencart directory rename htaccess.txt to .htaccess.
@@ -39,8 +75,8 @@ RewriteCond %{REQUEST_URI} !.*\.(ico|gif|jpg|jpeg|png|js|css)
 RewriteRule ^([^?]*) index.php?_route_=$1 [L,QSA]
 
 # Versions
-RewriteRule ^(.*)\.v[0-9]+\.css$ $1.css
-RewriteRule ^(.*)\.v[0-9]+\.js$ $1.js
+# RewriteRule ^(.*)\.v[0-9]+\.css$ $1.css
+# RewriteRule ^(.*)\.v[0-9]+\.js$ $1.js
 
 
 
